# file-redirect-follower

./: pyproject.toml  readme.md
filerefollow/: morewikimedia.py
scripts/: filerefollow
